client: use ZGC